--- a/Website/index.html
+++ b/Website/index.html
@@ -4,10 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <script src="main.js"></script>
     <link rel="stylesheet" href="styles.css">
+
     <title>Videogame Museum</title>
-    <link rel="icon" href="https://cdn.discordapp.com/attachments/754440404891336816/1051867782083514368/icon.png" type="image/x icon">
+
+    <link rel="icon"
+    href="Resources/icon.png"
+    type="image/x icon">
+
 </head>
 <body>
     <div class="background">
@@ -16,12 +22,21 @@
 
     <div class="bar">
         <div class="search-bar">
-            <input class="search-input" placeholder="Search..">
-            <img src="https://cdn.discordapp.com/attachments/754440404891336816/1051848072671531119/MagnifyingGlass.png" class="search-icon">
+            <input class="search-input"
+            placeholder="Search..">
+
+            <img src="Resources/search_icon.png"
+            class="search-icon">
         </div>
         
-        <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" class="iconlink"><img src="https://static.wixstatic.com/media/d621ec_87c047d62af445ac8912eca737d8dd94~mv2.png/v1/fill/w_600,h_376,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/d621ec_87c047d62af445ac8912eca737d8dd94~mv2.png" class="museum-icon"></a>
-        <img src="https://cdn.discordapp.com/attachments/754440404891336816/1051798876958507059/SlideButton.png" class="slide-button">
+        <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ"
+        class="iconlink">
+            <img src="Resources/logo.png"
+            class="museum-icon">
+        </a>
+
+        <img src="Resources/nav_icon.png"
+        class="slide-button">
     </div>
 
     
