--- a/Website/index.html
+++ b/Website/index.html
@@ -18,6 +18,9 @@
 <body>
     <div class="background">
         <div class="slide-images"></div>
+        <h2 class="about-museum OtherText">About the museum</h2>
+
+        <div class="tetris-menu"></div>
     </div>
 
     <div class="bar">
@@ -38,8 +41,6 @@
         <img src="Resources/nav_icon.png"
         class="slide-button">
     </div>
-
-    
-    
 </body>
+
 </html>
