--- a/Website/index.html
+++ b/Website/index.html
@@ -19,11 +19,9 @@
     <div class="background">
         <div class="slide-images"></div>
         <h2 class="about-museum OtherText">About the museum</h2>
-
-        <div class="tetris-menu"></div>
     </div>
 
-    <div class="bar">
+    <div class="bar" id="bar">
         <div class="search-bar">
             <input class="search-input"
             placeholder="Search..">
