--- a/Website/index.html
+++ b/Website/index.html
@@ -18,7 +18,7 @@
 <body>
     <div class="background">
         <div class="slide-images"></div>
-        <h2 class="about-museum OtherText">About the museum</h2>
+        <h2 class="about-museum OtherText">Scroll-Test</h2>
     </div>
 
     <div class="bar" id="bar">
