--- a/Website/index.html
+++ b/Website/index.html
@@ -22,12 +22,14 @@
     </div>
 
     <div class="bar" id="bar">
-        <div class="search-bar">
+        <div class="search-bar" id="s-bar">
             <input class="search-input"
+            id="search-input"
             placeholder="Search..">
 
             <img src="Resources/search_icon.png"
-            class="search-icon">
+            class="search-icon"
+            id ="s-icon">
         </div>
         
         <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ"
