--- a/Website/index.html
+++ b/Website/index.html
@@ -20,6 +20,10 @@
         <div class="slide-images"></div>
         <h2 class="about-museum OtherText">Scroll-Test</h2>
     </div>
+    
+    <div class="slide-bar" id="slide-bar">
+
+    </div>
 
     <div class="bar" id="bar">
         <div class="search-bar" id="s-bar">
@@ -39,7 +43,7 @@
         </a>
 
         <img src="Resources/nav_icon.png"
-        class="slide-button">
+        class="slide-button" id = "slide-button">
     </div>
 </body>
 
