--- a/Website/index.html
+++ b/Website/index.html
@@ -5,19 +5,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <script src="main.js"></script>
-    <link rel="stylesheet" href="styles.css">
+    <script src="main.js"></script> <!--connecting to the js file-->
+    <link rel="stylesheet" href="styles.css"> <!--same thing bus css-->
 
-    <title>Videogame Museum</title>
+    <title>Videogame Museum</title> <!--shows at the top bar of the page-->
 
-    <link rel="icon"
+    <link rel="icon" 
     href="Resources/icon.png"
-    type="image/x icon">
+    type="image/x icon"> <!--makes the icon for the top bar of the website-->
 
 </head>
 <body>
     <div class="background">
-        <div class="slide-images"></div>
+        <div class="slide-images"></div> <!-- is 'nothing' until you style it in css-->
         <h2 class="about-museum OtherText">Scroll-Test</h2>
     </div>
     
@@ -25,15 +25,15 @@
 
     </div>
 
-    <div class="bar" id="bar">
+    <div class="bar" id="bar"> <!--class is used for connecting to css and is for js-->
         <div class="search-bar" id="s-bar">
-            <input class="search-input"
+            <input class="search-input" 
             id="search-input"
-            placeholder="Search..">
+            placeholder="Search.."> <!--input class so you can put in words in de search bar-->
 
             <img src="Resources/search_icon.png"
             class="search-icon"
-            id ="s-icon">
+            id ="s-icon"> <!--places the icon images in the search bar-->
         </div>
         
         <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ"
