added additional comments

--- a/Website/index.html
+++ b/Website/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <script src="main.js"></script> <!--connecting to the js file-->
-    <link rel="stylesheet" href="styles.css"> <!--same thing bus css-->
+    <link rel="stylesheet" href="styles.css"> <!--same thing but css-->
 
     <title>Videogame Museum</title> <!--shows at the top bar of the page-->
 
@@ -25,15 +25,15 @@
 
     </div>
 
-    <div class="bar" id="bar"> <!--class is used for connecting to css and is for js-->
+    <div class="bar" id="bar"> <!--class is used for connecting to css and id is mainly for js-->
         <div class="search-bar" id="s-bar">
             <input class="search-input" 
             id="search-input"
-            placeholder="Search.."> <!--input class so you can put in words in de search bar-->
+            placeholder="Search.."> <!--input class so you can put in words in the search bar-->
 
             <img src="Resources/search_icon.png"
             class="search-icon"
-            id ="s-icon"> <!--places the icon images in the search bar-->
+            id ="s-icon"> <!--places the search icon in the search bar-->
         </div>
         
         <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ"
