--- a/Website/index.html
+++ b/Website/index.html
@@ -36,14 +36,14 @@
             id ="s-icon"> <!--places the search icon in the search bar-->
         </div>
         
-        <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ"
-        class="iconlink">
+        <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" 
+        class="iconlink"> <!-- refers to a link and href = refrence-->
             <img src="Resources/logo.png"
             class="museum-icon">
         </a>
 
         <img src="Resources/nav_icon.png"
-        class="slide-button" id = "slide-button">
+        class="slide-button" id = "slide-button"> <!--class and id for the side menu-->
     </div>
 </body>
 
