--- a/Website/index.html
+++ b/Website/index.html
@@ -45,6 +45,10 @@
         <img src="Resources/nav_icon.png"
         class="slide-button" id = "slide-button"> <!--class and id for the side menu-->
     </div>
+
+    <div class="p-notice" id="p-notice">
+        <h2 class="p-title" id="p-title">This website is not yet accesible for mobile devices, we're sorry for the inconvenience!</h2>
+    </div>
 </body>
 
 </html>
