--- a/Website/index.html
+++ b/Website/index.html
@@ -18,8 +18,7 @@
 <body>
     <div class="background">
         <div class="slide-image-border">
-            <img class="slide1 image" id="slide1" src="Resources/Museum_Image3.jpeg">
-            <img class="slide2 image" id="slide2" src="Resources/Museum_Image4.jpeg">
+            <img class="slide-image" id="slide-image" src="Resources/Museum_Image3.jpeg">
         </div> <!-- is 'nothing' until you style it in css-->
         <h2 class="about-museum OtherText">Scroll-Test</h2>
     </div>
