manually merged Dionysxs' files and Arzoka's files

--- a/Website/index.html
+++ b/Website/index.html
@@ -39,6 +39,22 @@
               </div>
         </div>
         <h2 class="about-museum OtherText">Scroll-Test</h2>
+        <h2 class="ReviewsTitle OtherText">Reviews</h2>
+        <div class="ReviewsBox">
+            <p class="ActiveText ReviewText">
+                "Lorem ipsum dolor sit amet. Qui provident ullam qui <br>
+aliquid voluptas eum itaque eveniet <br>
+a consequator dicta ea illo omnis in temporibus sequi. <br>
+Ea eaque recusandae eum omnis <br>
+exercitationem et animi rerum? <br>
+Ut enim soluta vel adipsci corrupti et quos corrupti. <br>
+Sit quaerat ullam aut omnis beautae ut velit dolorem aut <br>
+blanditiis molestiae eos saepe <br>
+ullam." -Danique Velour
+            </p>
+            <div class="ReviewLeft" id="ReviewLeft"></div>
+            <div class="ReviewRight" id="ReviewRight"></div>
+        </div>
     </div>
     
     <div class="slide-bar" id="slide-bar">
