Refined nav_button, added more animations

--- a/Website/index.html
+++ b/Website/index.html
@@ -18,6 +18,7 @@
 </head>
 <body>
     <div class="background" id="background">
+        
         <div class="container">
             <div class="swiper">
                 <!-- Additional required wrapper -->
@@ -85,9 +86,11 @@ ullam." -Danique Velour
             class="museum-icon"
             id="logo">
         </a>
-
-        <img src="Resources/nav_icon.png"
-        class="slide-button" id = "slide-button"> <!--class and id for the side menu-->
+        <div class="menu__toggler" id="menuToggle">
+            <div class="mtb1 MenuToggleBar--white" id="mtb1"></div>
+            <div class="mtb2 MenuToggleBar--white" id="mtb2"></div>
+            <div class="mtb3 MenuToggleBar--white" id="mtb3"></div>
+        </div>
     </div>
 
     
