--- a/Website/index.html
+++ b/Website/index.html
@@ -24,9 +24,10 @@
                 <!-- Additional required wrapper -->
                 <div class="swiper-wrapper">
                   <!-- Slides -->
-                  <div class="swiper-slide"><img src="Resources/Museum_Image1.jpeg"></div>
+                  <div class="swiper-slide"><img src="Resources/Museum_Image1.jpg"></div>
                   <div class="swiper-slide"><img src="Resources/Museum_Image2.jpg"></div>
-                  <div class="swiper-slide"><img src="Resources/Museum_Image3.jpeg"></div>
+                  <div class="swiper-slide"><img src="Resources/Museum_Image3.jpg"></div>
+                  <div class="swiper-slide"><img src="Resources/Museum_Image4.jpg"></div>
                 
                 </div>
                 <!-- If we need pagination -->
