Added game.html and information.html

--- a/Website/html/information.html
+++ b/Website/html/information.html
@@ -60,6 +60,16 @@
                 <h2 id="information-t" class="button-text prevent-select">Information</h2>
             </div>
 
+            <div class="history gotobutton" id="history-button">
+                <div class="button-line" id="history-b-line"></div>
+                <h2 id="history-t" class="button-text prevent-select">History</h2>
+            </div>
+
+            <div class="game gotobutton" id="game-button">
+                <div class="button-line" id="game-b-line"></div>
+                <h2 id="game-t" class="button-text prevent-select">Game</h2>
+            </div>
+
         </div>
 
         <div id="s-bar">
@@ -72,6 +82,8 @@
             <div class="english languagebutton" id="english-button"></div>
             <div class="dutch languagebutton" id="dutch-button"></div>
         </div>
+
+        <div id="tickets"></div>
         
         <div id="toggle-theme">
             <div id="t-overlay"></div>
