started homepage content

--- a/Website/html/game.html
+++ b/Website/html/game.html
@@ -91,9 +91,9 @@
 
     <!--Page-->
 
-    <div class="page" id="page">
+    <div class="page gamepage" id="page">
 
-        <footer>
+        <footer class="gamepagefooter">
             
             <div id="BottomSecTopBar"></div>
 
