--- a/Website/html/history.html
+++ b/Website/html/history.html
@@ -91,9 +91,9 @@
 
     <!--Page-->
 
-    <div class="page" id="page">
+    <div class="page historypage" id="page">
 
-        <footer>
+        <footer class="historypagefooter">
             
             <div id="BottomSecTopBar"></div>
 
