--- a/Website/html/information.html
+++ b/Website/html/information.html
@@ -96,9 +96,9 @@
 
     <!--Page-->
 
-    <div class="page" id="page">
+    <div class="page infopage" id="page">
 
-        <footer>
+        <footer class="infopagefooter">
             
             <div id="BottomSecTopBar"></div>
 
