--- a/Website/html/home.html
+++ b/Website/html/home.html
@@ -15,6 +15,8 @@
     <!--places the search icon in the tab-->
     <link rel="icon"  href="../img/icon.png" type="image/x icon">
 
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css"/>
+    
 </head>
 
 <body>
