--- a/Website/html/home.html
+++ b/Website/html/home.html
@@ -165,5 +165,6 @@
     </div>
 
     <!--End Page-->
+    <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
 </body>
 </html>
