added the atmosphere rooms

--- a/Website/html/information.html
+++ b/Website/html/information.html
@@ -98,6 +98,15 @@
 
     <div class="page infopage" id="page">
 
+        <h3>The atmosphere rooms</h3>
+        <p> As soon as you walk into the museum, you will be blown away by everything that makes game culture so beautiful and impressive.
+            <br>Follow our timeline though the atmosphere rooms and discover the history of video games through the game changers,
+            <br>highlights and important moments in technology, artwork and culture within the game industry.
+            <br>the classics, meet icons and discover the lost treasures of videogames.
+            <br>The museum has around 231 game computers, home computers and arcade cabinets ready to be played, and 327 unique play areas.
+            <br>That makes us the museum with the largest arcade in all of Europe!
+        </p>
+        
         <footer class="infopagefooter">
             
             <div id="BottomSecTopBar"></div>
