--- a/Website/html/information.html
+++ b/Website/html/information.html
@@ -107,6 +107,14 @@
             <br>That makes us the museum with the largest arcade in all of Europe!
         </p>
         
+        <h3>The lab</h3>
+        <p>Future and education go hand in hand, that's why in the Lab you will find the future of games and learn how you are part of that future.
+            <br>Surprise yourself by the museum's educational projects in schools and at workshops where the latest technology is explained and taught.
+            <br>The lab is a dynamic space. Go from admiring the game art to traveling through new worlds. There’s always something new to learn in the lab: the one time you’re learning
+            <br>everything about the history of gaming in a reading and the other time you’re welcomed by a gaming match or a meet-up.
+            <br>Experience the future of gaming!
+        </p>
+
         <footer class="infopagefooter">
             
             <div id="BottomSecTopBar"></div>
