--- a/Website/html/information.html
+++ b/Website/html/information.html
@@ -115,6 +115,12 @@
             <br>Experience the future of gaming!
         </p>
 
+        <h3>The barcade</h3>
+        <p>Welcome to our barcade, where the modern catering industry meets the retro arcade in a cozy environment. Here you can refuel after hours of adventures,
+            <br>challenges and saving the world. Next to our famous halal hotdogs and grilled sandwiches, we now also offer healthy sandwiches.
+            <br>The barcade is now also open for the general public that’s not visiting the museum itself. So bring your judo-teacher, your neighbour or your grandma for a nice cup of coffee.
+        </p>
+
         <footer class="infopagefooter">
             
             <div id="BottomSecTopBar"></div>
