added our history

--- a/Website/html/history.html
+++ b/Website/html/history.html
@@ -92,7 +92,16 @@
     <!--Page-->
 
     <div class="page historypage" id="page">
+        <h3>Our history</h3>
+        <p>A garage box in Den Haag is the place where the adventure started in 2008, with two friends, Hasan Tasdemir and Pascal Rappailles. 
+            <br>The garage quickly became too small, after which they moved to a warehouse on an industrial estate. Unfortunately, the warehouse was not heated and everything had
+            <br>to be transferred to an empty Ministry of Agriculture in the middle of winter. When this building also had to be cleared out, the then collection of 10 arcade video games was
+            <br>stored with some spare parts in an old showroom for classic cars. Because there was no room to renovate or play with the cabinets, suitable space was looked for.
+            <br>It was found in 2011 on the Cobaltstraat in Zoetermeer. There Hasan decided to rent the location with 4 friends and the adventure could grow into their own meeting place to
+            <br>practice their hobby and relax with a game.
+            </p>
 
+        
         <footer class="historypagefooter">
             
             <div id="BottomSecTopBar"></div>
