added continue? yes!

--- a/Website/html/history.html
+++ b/Website/html/history.html
@@ -120,6 +120,14 @@
             <br>could be housed and some of it exhibited.
             <br>At the beginning of 2017, a real museum location was found in close collaboration with the municipality: the former V&D building in the city center of Zoetermeer.
             </p>
+
+        <h3>Continue? Yes!</h3>
+        <p>From May 2017, a large group of volunteers and fans worked hard to get the pilot of the museum set up so that it was ready to play on December 1, 2017! The enormous influx
+            <br>of enthusiastic visitors and the many positive reactions to our museum speak for themselves.
+            <br>The National Video Game Museum has now become a great success, thanks in part to the tireless efforts of all our employees and volunteers.
+            </p>
+
+        
         <footer class="historypagefooter">
             
             <div id="BottomSecTopBar"></div>
