helped styling information.html

--- a/Website/html/information.html
+++ b/Website/html/information.html
@@ -99,25 +99,33 @@
     <div class="page infopage" id="page">
         <p></p>
 
-        <div class="boxed">
-            <h3>The atmosphere rooms</h3>
-            <p> As soon as you walk into the museum, you will be blown away by everything that makes game culture so beautiful and impressive.
-            <br>Follow our timeline though the atmosphere rooms and discover the history of video games through the game changers,
-            <br>highlights and important moments in technology, artwork and culture within the game industry.
-            <br>the classics, meet icons and discover the lost treasures of videogames.
-            <br>The museum has around 231 game computers, home computers and arcade cabinets ready to be played, and 327 unique play areas.
-            <br>That makes us the museum with the largest arcade in all of Europe!
-        </p>
-          </div>
+        <div class="info-text-box" id="info-text-box-1">
+            <div class="info-text-box-center">
+                <h2 class="info-text-box-title">The atmosphere rooms </h2>
+                <br>
+                <p class="info-text-box-text"> As soon as you walk into the museum, you will be blown away by everything that makes game culture so beautiful and impressive.
+                <br>Follow our timeline though the atmosphere rooms and discover the history of video games through the game changers,
+                <br>highlights and important moments in technology, artwork and culture within the game industry.
+                <br>the classics, meet icons and discover the lost treasures of videogames.
+                <br>The museum has around 231 game computers, home computers and arcade cabinets ready to be played, and 327 unique play areas.
+                <br>That makes us the museum with the largest arcade in all of Europe!
+                </p>
+            </div>
+        </div>
 
  
-        <h3>The lab</h3>
-        <p>Future and education go hand in hand, that's why in the Lab you will find the future of games and learn how you are part of that future.
-            <br>Surprise yourself by the museum's educational projects in schools and at workshops where the latest technology is explained and taught.
-            <br>The lab is a dynamic space. Go from admiring the game art to traveling through new worlds. There’s always something new to learn in the lab: the one time you’re learning
-            <br>everything about the history of gaming in a reading and the other time you’re welcomed by a gaming match or a meet-up.
-            <br>Experience the future of gaming!
-        </p>
+        <div class="info-text-box" id="info-text-box-2">
+            <div class="info-text-box-center">
+                <h2 class="info-text-box-title">The lab </h2>
+                <br>
+                <p class="info-text-box-text">Future and education go hand in hand, that's why in the Lab you will find the future of games and learn how you are part of that future.
+                <br>Surprise yourself by the museum's educational projects in schools and at workshops where the latest technology is explained and taught.
+                <br>The lab is a dynamic space. Go from admiring the game art to traveling through new worlds. There’s always something new to learn in the lab: the one time you’re learning
+                <br>everything about the history of gaming in a reading and the other time you’re welcomed by a gaming match or a meet-up.
+                <br>Experience the future of gaming!
+                </p>
+            </div>
+        </div>
 
         <h3>The barcade</h3>
         <p>Welcome to our barcade, where the modern catering industry meets the retro arcade in a cozy environment. Here you can refuel after hours of adventures,
