--- a/Website/html/information.html
+++ b/Website/html/information.html
@@ -101,6 +101,8 @@
 
         <div class="info-text-box" id="info-text-box-1">
             <div class="info-text-box-center">
+                <br>
+                <br>
                 <h2 class="info-text-box-title">The atmosphere rooms </h2>
                 <br>
                 <p class="info-text-box-text"> As soon as you walk into the museum, you will be blown away by everything that makes game culture so beautiful and impressive.
@@ -109,6 +111,9 @@
                 <br>the classics, meet icons and discover the lost treasures of videogames.
                 <br>The museum has around 231 game computers, home computers and arcade cabinets ready to be played, and 327 unique play areas.
                 <br>That makes us the museum with the largest arcade in all of Europe!
+                <br>
+                <br>
+                <br>
                 </p>
             </div>
         </div>
@@ -116,6 +121,8 @@
  
         <div class="info-text-box" id="info-text-box-2">
             <div class="info-text-box-center">
+                <br>
+                <br>
                 <h2 class="info-text-box-title">The lab </h2>
                 <br>
                 <p class="info-text-box-text">Future and education go hand in hand, that's why in the Lab you will find the future of games and learn how you are part of that future.
@@ -123,15 +130,28 @@
                 <br>The lab is a dynamic space. Go from admiring the game art to traveling through new worlds. There’s always something new to learn in the lab: the one time you’re learning
                 <br>everything about the history of gaming in a reading and the other time you’re welcomed by a gaming match or a meet-up.
                 <br>Experience the future of gaming!
+                <br>
+                <br>
+                <br>
                 </p>
             </div>
         </div>
 
-        <h3>The barcade</h3>
-        <p>Welcome to our barcade, where the modern catering industry meets the retro arcade in a cozy environment. Here you can refuel after hours of adventures,
-            <br>challenges and saving the world. Next to our famous halal hotdogs and grilled sandwiches, we now also offer healthy sandwiches.
-            <br>The barcade is now also open for the general public that’s not visiting the museum itself. So bring your judo-teacher, your neighbour or your grandma for a nice cup of coffee.
-        </p>
+        <div class="info-text-box" id="info-text-box-3">
+            <div class="info-text-box-center">
+                <br>
+                <br>
+                <h2 class="info-text-box-title">The barcade</h2>
+                <br>
+                <p class="info-text-box-text">Welcome to our barcade, where the modern catering industry meets the retro arcade in a cozy environment. Here you can refuel after hours of adventures,
+                <br>challenges and saving the world. Next to our famous halal hotdogs and grilled sandwiches, we now also offer healthy sandwiches.
+                <br>The barcade is now also open for the general public that’s not visiting the museum itself. So bring your judo-teacher, your neighbour or your grandma for a nice cup of coffee.
+                <br>
+                <br>
+                <br>
+                </p>
+            </div>
+        </div>
 
         <footer class="infopagefooter">
             
