finished extra life

--- a/Website/html/history.html
+++ b/Website/html/history.html
@@ -132,6 +132,25 @@
                 </p>
             </div>
         </div>
+
+        <div class="info-text-box" id="info-text-box-6">
+            <div class="info-text-box-center">
+                <br>
+                <br>
+                <h2 class="info-text-box-title">Extra life</h2>
+                <br>
+                <p class="info-text-box-text"> In 2016 Hasan came in contact with Jan Kragt, City marketer of the municipality of Zoetermeer, who was deeply impressed by the collection, suggested the idea of turning it into a
+                <br>museum and setting up a foundation for it. Hasan and Jan came up with the name on the spot and the National Video Game Museum was born. Together with a number of
+                <br>important players from the Dutch game community, the National Videogame Museum Foundation was subsequently established.
+                <br>The municipal council was enthusiastic about the idea and decided to support the museum financially. This made it possible to rent a heated storage facility where the entire collection
+                <br>could be housed and some of it exhibited.
+                <br>At the beginning of 2017, a real museum location was found in close collaboration with the municipality: the former V&D building in the city center of Zoetermeer.
+                <br>
+                <br>
+                <br>
+                </p>
+            </div>
+        </div>
                 
         <footer class="historypagefooter">
             
