finished level up

--- a/Website/html/history.html
+++ b/Website/html/history.html
@@ -168,7 +168,28 @@
             </div>
         </div>
 
-        
+        <div class="info-text-box" id="info-text-box-8">
+            <div class="info-text-box-center">
+                <br>
+                <br>
+                <h2 class="info-text-box-title">Level up</h2>
+                <br>
+                <p class="info-text-box-text"> We are now busy enlarging the museum, deepening the experience and strengthening the museological and educational value of our beautiful museum.
+                <br>We are doing everything we can to further professionalize the museum and prepare it for the next 'level' at a permanent and definitive location.
+                <br>And our ambition goes much further, because we want the National Videogame Museum to grow into a total concept, including:
+                <br>•	a National Game Knowledge Centre;
+                    <br>•	a National Videogame Archive;
+                    <br>•	an eSports arena;
+                    <br>•	a Hacker/makerspace for young and old;
+                    <br>•	a game fair and event location
+                    <br>
+                <br>
+                <br>
+                </p>
+            </div>
+        </div>
+
+
         <footer class="historypagefooter">
             
             <div id="BottomSecTopBar"></div>
