fixed minor stuff

--- a/Website/html/home.html
+++ b/Website/html/home.html
@@ -94,7 +94,7 @@
     <!--Page-->
 
     <div class="page homepage" id="page">
-
+        <h2 class="textbox-title hometitle">Ons museum!</h2>
         <div class="container">
             <div class="swiper">
                 <!-- Additional required wrapper -->
