--- a/Website/html/home.html
+++ b/Website/html/home.html
@@ -128,12 +128,57 @@
             <p id="sunday" class="textbox-text">Sunday: 12.00 - 18.00 </p>
         </figure>
 
+        <h2 class="textbox-title2 reviewtitle" id="reviewtitle">Reviews</h2>
+
+        <div class="reviews" id="reviews-1">
+            <div class="reviews-textbox">
+                <br>
+                <p class="reviews-textbox-text" id="rtbt-1">I was amazed, what a super nice museum.
+                    <br>Great to be able to get started with these games.
+                    <br>It was like going to an arcade in the old days without all those guilders
+                    <br>and we're not even talking about the retro game consoles
+                    <br>that are there in abundance. I hope we get to see a lot more
+                    <br>-M.l. de Bruijn
+                    <br>
+                    <br>
+                </p>
+            </div>
+        </div>
+        
+        <div class="reviews" id="reviews-2">
+            <div class="reviews-textbox">
+                <br>
+                <p class="reviews-textbox-text" id="rtbt-1">Been with 4 boys (10 to 12 years). 
+                    <br>We all enjoyed. Fun games and a lot of nostalgia 
+                    <br>(at least for me).
+                    <br>We will definitely go again, only from Groningen
+                    <br>it is a bit of a drive, but definitely worth it.
+                    <br>-Ivan Bijmholt
+                    <br>
+                    <br>
+                </p>
+            </div>
+        </div>
+
+        <div class="reviews" id="reviews-3">
+            <div class="reviews-textbox">
+                <br>
+                <p class="reviews-textbox-text" id="rtbt-1">A place where you can go back in time,
+                    <br>from Atari to PlayStation. There is plenty to do here for young and old. 
+                    <br>The arcade cabinets also ensure that you race in a
+                    <br>podracer or play Tekken against people. 
+                    <br>Take a look here and be overwhelmed by the game world.
+                    <br>-Frank Pronk
+                    <br>
+                    <br>
+                </p>
+            </div>
+        </div>   
+
         <figure id="contact" class="textbox">
             <h2 class="textbox-title"> Contact:</h2>
             <p class="textbox-text"> pers@nationaalvideogamemuseum.nl</p>
         </figure>
-
-        
 
         <!--Bottom section-->
         <footer class="homepagefooter">
