--- a/Website/html/game.html
+++ b/Website/html/game.html
@@ -92,15 +92,20 @@
     <!--Page-->
 
     <div class="page gamepage" id="page">
+        <p></p>
         
             <div class="info-text-box" id="info-text-box-9">
                 <div class="info-text-box-center">
                     <br>
                     <br>
-                    <h2 class="info-text-box-title" id="history-title">Anime corner</h2>
+                    <h2 class="info-text-box-title" id="history-title">Music games</h2> 
                     <br>
-                    <p class="info-text-box-text" id="itbt-9"> 
-                    <br>
+                    <p class="info-text-box-text" id="itbt-9"> In the arcade you can find a bunch of different music games. Dancing games, guitar games, you name it! 
+                    <br>We have games like:
+                        <br>• Guitar Hero
+                        <br>• Dance Dance Revolution
+                        <br>• FutureTomTom, and more!
+                    <br>And if you're a fan of anime, you should try out our rythm games!
                     </p>
                     <br>
                     <br>
