--- a/Website/html/game.html
+++ b/Website/html/game.html
@@ -105,7 +105,7 @@
                         <br>• Guitar Hero
                         <br>• Dance Dance Revolution
                         <br>• FutureTomTom, and more!
-                    <br>And if you're a fan of anime, you should try out our rythm games!
+                    <br>If you like music or like to test your speed, you should try out our rythm games!
                     </p>
                     <br>
                     <br>
@@ -119,8 +119,9 @@
                     <br>
                     <h2 class="info-text-box-title">Horror games</h2>
                     <br>
-                    <p class="info-text-box-text" id="itbt-10"> 
-                    <br>
+                    <p class="info-text-box-text" id="itbt-10"> Good news for all the horror fans out there: we have scary games!
+                    <br>Want to shoot some undead zombies with a friend? Come check out House Of The Dead!
+                    <br>Though there's only a few horror games in our arcade, you're bound to love them.
                     <br>
                     <br>
                     <br>
@@ -132,7 +133,7 @@
                 <div class="info-text-box-center">
                     <br>
                     <br>
-                    <h2 class="info-text-box-title">Dance games</h2>
+                    <h2 class="info-text-box-title">Wii games</h2>
                     <br>
                     <p class="info-text-box-text" id="itbt-11"> 
                     <br>
