--- a/Website/html/game.html
+++ b/Website/html/game.html
@@ -135,8 +135,9 @@
                     <br>
                     <h2 class="info-text-box-title">Wii games</h2>
                     <br>
-                    <p class="info-text-box-text" id="itbt-11"> 
-                    <br>
+                    <p class="info-text-box-text" id="itbt-11"> Do you remember when you were a kid and you'd play games on your Wii with your siblings or your friends?
+                    <br>Well, now you can do it in our arcade too!
+                    <br>Come relive your childhood and play your favorite games with your friends!
                     <br>
                     <br>
                     <br>
