--- a/Website/html/game.html
+++ b/Website/html/game.html
@@ -151,8 +151,11 @@
                     <br>
                     <h2 class="info-text-box-title">Fighting games</h2>
                     <br>
-                    <p class="info-text-box-text" id="itbt-12"> 
-                    <br>
+                    <p class="info-text-box-text" id="itbt-12"> Do you like violence? Not in real life, of course. But playing against your friends on one of our fighting boxes is a good alternative!
+                    <br>Play games like:
+                        <br>• Mortal Kombat II
+                        <br>• Killer Instict, and others!
+                    <br>And if you'd rather fight alongside your friends, we've got games like Terminator Salvation you can try out!
                     <br>
                     <br>
                     <br>
