last infobox done

--- a/Website/html/game.html
+++ b/Website/html/game.html
@@ -169,7 +169,10 @@
                     <br>
                     <h2 class="info-text-box-title">Racing games</h2>
                     <br>
-                    <p class="info-text-box-text" id="itbt-13"> 
+                    <p class="info-text-box-text" id="itbt-13"> Fan of racing games? Me too!
+                    <br>Come play against your friends and see who's the fastest!
+                    <br>Or maybe you want to race for a highscore on one of our boxes. Well, you can do that too!
+                    <br>Have fun winning races!
                     <br>
                     <br>
                     <br>
